--- a/mytime-ui/src/app/common/components/actions-renderer.component.css
+++ b/mytime-ui/src/app/common/components/actions-renderer.component.css
@@ -10,9 +10,10 @@
 .btn-edit .mdi,
 .btn-delete .mdi {
     margin-right: 4px !important;
-    font-size: 14px !important;
+    font-size: 20px !important;
 }
 
 .btn-delete {
     margin-left: 5px !important;
+    color: red !important;
 }
