--- a/mytime-ui/src/app/admin/components/designation-list.component.html
+++ b/mytime-ui/src/app/admin/components/designation-list.component.html
@@ -24,8 +24,8 @@
                 <!-- Add Button -->
                 <button 
                   class="btn btn-primary btn-sm d-flex align-items-center"
-                  (click)="openAddEditRole()"
-                  title="Add new role"
+                  (click)="openAddEditDesignation()"
+                  title="Add new designation"
                 >
                   <i class="mdi mdi-plus me-1"></i>
                   <span>Add Designation</span>
@@ -80,7 +80,7 @@
             </div>
           </div>
 
-          <!-- <app-create-role [isVisible]="showSidebar" [role]="selectedRole"  (closeSidebar)="onCloseSidebar()" (saveRole)="onSaveRole($event)"></app-create-role> -->
+          <app-create-designation [isVisible]="showSidebar" [designation]="selectedDes"  (closeSidebar)="onCloseSidebar()" (saveDesignation)="onSaveDesignation($event)"></app-create-designation>
         </div>
       </div>
     </div>
