--- a/mytime-ui/src/app/layout/admin-sidebar.component.html
+++ b/mytime-ui/src/app/layout/admin-sidebar.component.html
@@ -46,7 +46,50 @@
       </ul>
     </div>
   </li>
-  
+  <!-- Employee Management -->
+<li class="nav-item">
+  <a class="nav-link" data-toggle="collapse" href="#employee" aria-expanded="false" aria-controls="employee">
+    <i class="mdi mdi-briefcase-account-outline menu-icon"></i>
+    <span class="menu-title">Employee Management</span>
+    <i class="mdi mdi-chevron-down menu-arrow"></i>
+  </a>
+  <div class="collapse" id="employee">
+    <ul class="nav flex-column sub-menu">
+      <li class="nav-item"> 
+        <a class="nav-link" routerLink="/admin/employees">
+          <i class="mdi mdi-account-multiple-outline mr-2"></i> All Employees
+        </a>
+      </li>
+     
+      <li class="nav-item"> 
+        <a class="nav-link" routerLink="/admin/employees/offboarding">
+          <i class="mdi mdi-account-arrow-left-outline mr-2"></i> Offboarding
+        </a>
+      </li>
+      <li class="nav-item"> 
+        <a class="nav-link" routerLink="/admin/employees/documents">
+          <i class="mdi mdi-file-document-outline mr-2"></i> Employee Documents
+        </a>
+      </li>
+      
+      <li class="nav-item"> 
+        <a class="nav-link" routerLink="/admin/employees/reports">
+          <i class="mdi mdi-chart-bar mr-2"></i> Employee Reports
+        </a>
+      </li>
+      <li class="nav-item"> 
+        <a class="nav-link" routerLink="/admin/employees/org-chart">
+          <i class="mdi mdi-sitemap mr-2"></i> Organization Chart
+        </a>
+      </li>
+      <li class="nav-item"> 
+        <a class="nav-link" routerLink="/admin/employees/training">
+          <i class="mdi mdi-school-outline mr-2"></i> Training & Development
+        </a>
+      </li>
+    </ul>
+  </div>
+</li>
   <!-- Time Sheet Management -->
   <li class="nav-item">
     <a class="nav-link" data-toggle="collapse" href="#timesheet" aria-expanded="false" aria-controls="timesheet">
