--- a/mytime-ui/src/app/app.component.css
+++ b/mytime-ui/src/app/app.component.css
@@ -12,6 +12,7 @@
 @media (max-width: 767px) {
     .content-wrapper {
         padding: 3.5rem 1.5rem !important;
+        padding-bottom: 0px !important;
     }
 }
 
@@ -21,6 +22,7 @@
     width: 100%;
     -webkit-flex-grow: 1;
     flex-grow: 1;
+    padding-bottom: 0px !important;
 }
 
 :root {
