Senior .NET Developer – Mid-Senior Level | Riyadh, Saudi Arabia

--- a/mytime-ui/src/app/admin/components/employees/education/employees-education-add.component.html
+++ b/mytime-ui/src/app/admin/components/employees/education/employees-education-add.component.html
@@ -76,7 +76,7 @@
             <span class="input-group-text">
               <i class="mdi mdi-calendar"></i>
             </span>
-            <select class="form-control" formControlName="YearOfCompletion">
+            <select class="form-control" formControlName="Year">
               <option value="">Select Year</option>
               <option *ngFor="let year of years" [value]="year">
                 {{ year }}
